--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -112,7 +112,28 @@
 
   <script>
 
-    var amount = {{ grand_total }};
+    function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+          var cookies = document.cookie.split(';');
+          for (var i = 0; i < cookies.length; i++) {
+              var cookie = cookies[i].trim();
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+    }
+    var amount = "{{ grand_total }}";
+    var url = "{% url 'payments' %}"
+    var csrftoken = getCookie('csrftoken');
+    var orderID = '{{ order.order_number }}';
+    var payment_method = 'PayPal';
+    
+    
 
     // Render the PayPal button
 
@@ -152,13 +173,32 @@
         },
 
         onAuthorize: function(data, actions) {
-            return actions.payment.execute().then(function() {
-                window.alert('Payment Complete!');
-            });
-            
+          return actions.payment.execute().then(function(details) {
+            console.log(details);
+            sendData();
+            function sendData() {
+              fetch(url, {
+                  method: 'POST',  
+                  headers: {
+                      "Content-type": "application/json",
+                      "X-CSRFToken": csrftoken,
+                  },
+                  body: JSON.stringify({
+                      orderID: orderID,
+                      transID: details.id,
+                      payment_method: payment_method,
+                      status: details.state,
+                  })
+              })
+              .then((response) => response.json())
+              .then((data) => {
+                  console.log(data);
+              })
+          }
+          });
         }
 
-    }, '#paypal-button-container');
+     }, '#paypal-button-container');
 
 </script>
 {% endblock %}
